# diskann-rs

./: Cargo.toml  LICENSE  README.md
benches/: benchmark.rs  comparison.rs
examples/: bigann.rs  demo.rs  diskann_mnist.rs  diskann_sift.rs  perf_test.rs
src/: filtered.rs  incremental.rs  lib.rs  pq.rs  simd.rs  sq.rs
src/benchmark/: formats.rs  ground_truth.rs  mod.rs  recall.rs  synthetic.rs
