[package]
name = "ami-diskann"
version = "0.1.0"
edition = "2021"
description = "A DiskANN-based vector search library with scalar quantization (F16, per-dimension Int8), zero-copy loading, filtered search, and composable VectorQuantizer trait. Built on the Vamana graph algorithm with memory-mapped storage."
license = "MIT"
repository = "https://github.com/amikos-tech/ami-diskann"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
memmap2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
bytemuck = "1.14"
rayon = "1.10"
half = { version = "2.4", features = ["bytemuck"] }
ndarray = { version = "0.16" }
anndists = {version = "0.1.3", default-features = false}
log = { version = "0.4" }

[dev-dependencies]
cpu-time = "1.0.0"
byteorder = "1.5.0"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
hnsw_rs = "0.3"
sysinfo = "0.32"

[features]
default = []
hdf5 = ["dep:hdf5-metno"]

[dependencies.hdf5-metno]
package = "hdf5-metno"
version = "0.10.0"
optional = true

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "comparison"
harness = false

[[example]]
name = "diskann_sift"
required-features = ["hdf5"]

[[example]]
name = "diskann_mnist"
required-features = ["hdf5"]
